--- a/style.css
+++ b/style.css
@@ -68,9 +68,9 @@ p{
   background-size: cover;
 }
 
-.body2 {
+.body2, .body4 {
     background-color: black;
-    background-image: url(https://i.pinimg.com/originals/72/fd/37/72fd37d3a6855ae44a49348ff0315724.gif);
+    background-image: url(https://i.pinimg.com/originals/55/a5/23/55a523855425a0f490ac99fd64f45ab9.gif);
 }
 
 .deadmeat {
@@ -111,3 +111,4 @@ h2 {
             flex-direction: column; /* Stack elements vertically on small screens */
         }
     }
+
