--- a/style.css
+++ b/style.css
@@ -112,10 +112,19 @@ h2 {
         }
     }
 
-.body5{
-   background-color: black;
-    background-image: url(https://i.pinimg.com/originals/6b/64/61/6b646107167b29e97a9ed299933d21b1.gif);
-    background-repeat: no-repeat;
-     background-attachment: fixed;
-  background-size: cover;
+
+.row {
+  padding-top: 70px;
+  display: flex;
 }
+
+.column {
+  flex: 33.33%;
+  padding: 5px;
+}
+    
+.product{
+  color: red;
+  font-style: italic;
+}
+
